# algorithm

./: .gitignore  fs.txt  gen_cmake_code.sh  push.sh  readme.md
baby_tutorial/: algebra.md  trigonometric.md
cmake/: CMakeLists.txt  gen_code.sh  main.cpp  run_cmake.sh
cmake/model/: Cat.h  dog.cc  dog.h  person.hpp
cmake/util/: util.hpp
cppProjects/: Test.java  a.out  out  reverseMemory.cpp  test.cpp
lua/: test.lua
python/: ProgramMah.py  draw_mah.py  gen_pic.py  logg.py  mp3_id3.py  so_split.py
python/util/: __init__.py  dir.py  logg.py  mathModelZ.py  math_func.py  time.py  vector_drawing.py  vectors_z.py
rust/: gen_run.sh  main  main.rs
rust/hola_amigo/: Cargo.toml  gen_run.sh
src/: Arr.java  Del.java  Eval.java  Fs.java  LeetCode.java  Main.java  Main2.java  Main3.java  Person.java  TestListNode.java  Tree.java  TreeNode.java  max.java
src/DFS/: Solution.java
src/bfs/: Solution.java
src/bit/: Solution.java
src/datastructor/: ListNode.java  MaxQueue.java  MinStack.java  MyStack.java  Person.java  Tree.java  TreeNode.java  Trie.java  Ufs.java  WordDictionary.java
src/dfs/: Solution.java
src/doublePoint/: Palindrome.java  Solution.java
src/dp/: Solution.java
src/kotlintest/: KtObj.kt  Person.kt
src/math/: MathDemo.java
src/monotoneStack/: Solution.java
src/prefixSum/: NumSubarraysWithSum.java  PivotIndex.java  Solution.java  SubArraySum.java
src/slidingWindow/: Solution.java
src/testrxjava/: RxjavaDemo.java
src/ufs/: OKSolution.java  Solution.java  UfsSolution.java
src/xmlreader/: StyleAttr.java  XmlReader.java  attrs.xml  (+1 more)
(+4 files in other folders)
